--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('https://i.pinimg.com/originals/ba/33/d5/ba33d55d2a51dc4c95d29984b2b4dfdc.jpg') no-repeat center center fixed;
+      background: url('https://i.pinimg.com/736x/da/ff/63/daff6309239027c90c25ee69dbb44f37.jpg') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Comic Sans MS', cursive, sans-serif;
       display: flex;
@@ -88,7 +88,7 @@ And finally, the fifth time – the most beautiful one. Jab hum teeno saath me M
   </div>
 
   <div class="buttons">
-    <a href="index.html" class="nav-btn">⬅ Previous</a>
+    <a href="page1.html" class="nav-btn">⬅ Previous</a>
     <a href="page3.html" class="nav-btn">Next ➔</a>
   </div>
 
