--- a/page2.html
+++ b/page2.html
@@ -88,7 +88,7 @@ And finally, the fifth time – the most beautiful one. Jab hum teeno saath me M
   </div>
 
   <div class="buttons">
-    <a href="page1.html" class="nav-btn">⬅ Previous</a>
+    <a href="index.html" class="nav-btn">⬅ Previous</a>
     <a href="page3.html" class="nav-btn">Next ➔</a>
   </div>
 
