--- a/page8.html
+++ b/page8.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Insecurity Page</title>
+  <title>Insecurity </title>
   <style>
     body {
       margin: 0;
@@ -67,7 +67,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🌸 Insecurity Page</h1>
+    <h1>🌸 Insecurities </h1>
     <p>
 Sometimes, I see those hidden fears in your eyes, Manya.
 I know there are moments when you feel you’re not enough… when your own family doesn’t prioritise you the way you deserve… when your dreams seem too far away. But listen to me today – tum jitni ho, jaise ho, mere liye perfect ho.
